更新博客网址背景图以及头像，增加博客可播放音乐功能

--- a/themes/hexo-theme-matery/layout/contact.ejs
+++ b/themes/hexo-theme-matery/layout/contact.ejs
@@ -38,7 +38,7 @@
                     <b>友链信息</b><br>
                     <b>博客名称: <%- config.title %></b><br>
                     <b>博客网址: <%- config.url %></b><br>
-                    <b>博客头像: <%- config.url %>/medias/logo.jpg</b><br>
+                    <b>博客头像: <%- config.url %>/medias/avatar.jpg</b><br>
                     <b>博客介绍: 犹豫就会败北</b><br>
                 </p>
                 <div class="container">
