--- a/themes/hexo-theme-matery/layout/contact.ejs
+++ b/themes/hexo-theme-matery/layout/contact.ejs
@@ -39,7 +39,7 @@
                     <b>博客名称: <%- config.title %></b><br>
                     <b>博客网址: <%- config.url %></b><br>
                     <b>博客头像: <%- config.url %>/medias/avatar.jpg</b><br>
-                    <b>博客介绍: 犹豫就会败北</b><br>
+                    <b>博客介绍: 犹豫就会错过，主动就有故事～</b><br>
                 </p>
                 <div class="container">
                     <section id="custom" class="bb-section">
