更新主题模块评论框样式

--- a/themes/hexo-theme-matery/layout/_partial/twikoo.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/twikoo.ejs
@@ -249,7 +249,8 @@
         <i class="fas fa-comments fa-fw" aria-hidden="true"></i>
         <span>评论</span>
     </div>
-    <div class="card-content" style="display: grid">
+    <!-- <div class="card-content" style="display: grid"> -->
+    <div class="card-content">
         <div id="tcomments"></div>
     </div>
 </div>
