--- a/themes/hexo-theme-matery/layout/_partial/minivaline.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/minivaline.ejs
@@ -13,7 +13,7 @@
         <i class="fas fa-comments fa-fw" aria-hidden="true"></i>
         <span>评论</span>
     </div>
-    <div id="mvcomments" class="card-content" style="display: grid">
+    <div id="mvcomments" class="card-content">
     </div>
 </div>
 
