--- a/themes/hexo-theme-matery/layout/_partial/valine.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/valine.ejs
@@ -239,7 +239,7 @@
         <i class="fas fa-comments fa-fw" aria-hidden="true"></i>
         <span>评论</span>
     </div>
-    <div id="vcomments" class="card-content" style="display: grid">
+    <div id="vcomments" class="card-content">
     </div>
 </div>
 
