--- a/themes/hexo-theme-matery/layout/_partial/post-detail.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/post-detail.ejs
@@ -186,6 +186,10 @@
         <%- partial('_partial/minivaline') %>
     <% } %>
 
+    <% if (theme.waline && theme.waline.enable) { %>
+        <%- partial('_partial/waline') %>
+    <% } %>
+
     <% if (theme.changyan && theme.changyan.enable) { %>
         <%- partial('_partial/changyan') %>
     <% } %>
